All albums are displayed now on '/albums' routing path
