# iMusic/ClientApp/src/app/core/swagger/api/api.ts
@@ -1,5 +1,7 @@
+export * from './album.service';
+import { AlbumService } from './album.service';
 export * from './artist.service';
 import { ArtistService } from './artist.service';
 export * from './song.service';
 import { SongService } from './song.service';
-export const APIS = [ArtistService, SongService];
+export const APIS = [AlbumService, ArtistService, SongService];
