# iMusic/DataModel/Repository/Implementation/AlbumRepository.cs
@@ -1,4 +1,5 @@
 ﻿using System;
+using System.Collections.Generic;
 using System.Linq;
 using iMusic.DataModel.Context;
 using iMusic.DataModel.Models;
@@ -10,6 +11,11 @@ namespace iMusic.DataModel.Repository.Implementation
     public class AlbumRepository : GenericRepository<Album>, IAlbumRepository
     {
         public AlbumRepository(AppDbContext context) : base(context) { }
+
+        public List<Album> GetAll()
+        {
+            return _context.Albums.Include(p => p.Songs).ToList();
+        }
 
         public Album GetByName(string name, string artistName)
         {
